--- a/style.css
+++ b/style.css
@@ -76,15 +76,18 @@ a{
     width: 10vw;
     height: 9vh;
     margin-top: 13%;
+    border: none;
+
 }
 .explore{
-    background-color: rgb(231, 219, 219);
+    background-color: rgb(189, 61, 168);
     border-color: rgb(247, 228, 228);
     color: white;
     width: 10vw;
     height: 9vh;
     margin-top: 13%;
     margin-left: 6%;
+    border: none;
 }
 h1{
     font-size: 39px;
@@ -241,6 +244,7 @@ h3{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-top: 5%;
 }
 .product{
     border: solid #393d3d;
@@ -253,7 +257,9 @@ h3{
     height: 25vh;
     border-radius: 30px;
 }
-
+#earphones{
+    width: 5vw;
+}
 
 @media (max-width:768px){
   .nav{
